--- a/public/partials/historyAdmin.html
+++ b/public/partials/historyAdmin.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-controller="historyCtrl">
   <nav class="navbar navbar-default">
     <div class="container-fluid ">
       <ul class="nav navbar-nav ">
@@ -9,15 +9,33 @@
       </ul>
     </div>
   </nav>
-  
+  <div class="row" >
   <h2 id="h2_inline" >History  &#8352;</h2>
-  
-   </br>
-   
-  <div  ng-controller="user">
-   <div class="row">
-    
+  </div>
+  <div class="row" >
+   <table   class=" table table-responsive" >
 
-</div>
-</div>
+        <thead>
+          <tr>
+            <th >Item</th>
+             <th>Bid price</th>
+            <th>Customer Name</th>
+            <th>Customer Price</th>
+          </tr>
+        </thead>
+
+        <tbody id="myTable">
+         <tr ng-repeat="data in myData | filter : search"  >
+          <td>{{data.Item}}</td>
+          <td>{{data.price}}</td>
+          <td>{{data.   }}</td>
+          <td >{{data.    }}</td>   
+        </tr>
+
+      </tbody>
+
+    </table>
+ 
+  </div>
+    
 </div>
